# CS477-Checkpointing

./: .gitignore  Makefile  README.md  hello-world-func.c  hello-world.c  justfile  print.c
app/: Cargo.toml  Makefile  run.sh  stack.proc
app/src/: main.rs
get-tasks/: Makefile  get-tasks.c
hello-world/: Makefile  hello-world.c
