[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
libc = "0.2.164"
nix = { version = "0.29.0", features = ["ioctl", "ptrace"] }
object = "0.36.5"
postcard = { version = "1.0.10", features = ["alloc"] }
regex = "1.11.1"
serde = { version = "1.0.215", features = ["derive"] }
